# task-pilot

./: README.md  database.py  decorators.py  main.py  pyproject.toml  requirements.txt
ai/: agent.py  checkpointer.py
ai/tools/: __init__.py  remind.py  time.py  todo.py  web_search.py  wiki.py
data/: bot.db  checkpoints.db
handlers/: __init__.py  ai.py  help.py  qr.py  remind.py  start.py  todo.py  unknown.py
utils/: __init__.py  parse_time.py  reminder.py
