[project]
name = "task-pilot"
version = "0.1.0"
description = "A Telegram Bot that acts as your personal assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.8",
]
