[project]
name = "task-pilot"
version = "0.2.0"
description = "A Telegram Bot that acts as your personal assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.8",
    "qrcode[pil]>=8.2",
    "wikipedia>=1.4.0",
]
